feat: SQL construction using jooq